--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,21 +19,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install --upgrade cloudsmith-cli wheel sdist
+        pip install --upgrade cloudsmith-cli 
         sudo apt-get install -y ruby ruby-dev rubygems build-essential
         sudo gem install --no-document fpm
 
-    - name: Build App
-      run: |
-        python3 setup.py sdist bdist_wheel
 
     - name: Prepare for Deploy
       run: |
-        ls -lah
-        ls -lah dist
-        chmod +x ./dist/digitalbits-core-prometheus-exporter
         fpm -f -s dir -t deb -n digitalbits-core-prometheus-exporter -v 1.0.0 \ 
-          ./dist/digitalbits-core-prometheus-exporter=/usr/local/bin/digitalbits-core-prometheus-exporter
+          ./digitalbits_core_prometheus_exporter=/opt/digitalbits-core-prometheus-exporter
 
     - name: Deploy
       run: |
