--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,4 @@ jobs:
       run: |
         export CLOUDSMITH_API_KEY=${{ secrets.CLOUDSMITH_API_KEY }}
         cloudsmith push deb xdb-foundation/digitalbits-core-prometheus-exporter/ubuntu/focal \
-        digitalbits-core-prometheus-exporter_1.0.0.deb      
+        digitalbits-core-prometheus-exporter_1.0.0_amd64.deb     
