--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,15 @@ jobs:
         pip install cloudsmith-cli==0.26.0
         pip uninstall click -y
         pip install click==7.1.2
+        pip install pyinstaller
+        pip install prometheus_client
         sudo apt-get install -y ruby ruby-dev rubygems build-essential alien
         sudo gem install --no-document fpm
 
+    - name: Build Binaries
+      run: |
+        pyinstaller -wF digitalbits_core_prometheus_exporter/exporter.py
+        mv dist/exporter dist/prometheus_exporter-linux-amd64
     - name: Github Tag Bump
       id: bump_version
       uses: anothrNick/github-tag-action@1.34.0
@@ -27,6 +33,13 @@ jobs:
           DEFAULT_BUMP: "patch"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: false  
+    - uses: ncipollo/release-action@v1
+      with:
+          allowUpdates: true
+          artifacts: "dist/prometheus_exporter-linux-amd64"
+          tag: ${{ steps.bump_version.outputs.tag }}
+          bodyFile: "README.md"
+          token: ${{ secrets.GITHUB_TOKEN }}   
 
     - name: Prepare for Deploy
       run: |
