--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,26 @@
 name: DigitalBits Core Prometheus Exporter
 
-on:
-  workflow_dispatch:
+on: push
 
 jobs:
+  release:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Github Tag Bump
+      id: bump_version
+      uses: anothrNick/github-tag-action@1.34.0
+      env:
+          DEFAULT_BUMP: "patch"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: false  
+    - uses: ncipollo/release-action@v1
+      with:
+          tag: ${{ steps.bump_version.outputs.tag }}
+          bodyFile: "README.md"
+          token: ${{ secrets.GITHUB_TOKEN }}   
+
   build:
+    needs: release
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -27,33 +43,65 @@ jobs:
       run: |
         pyinstaller -wF digitalbits_core_prometheus_exporter/exporter.py
         mv dist/exporter dist/prometheus_exporter-linux-amd64
-    - name: Github Tag Bump
-      id: bump_version
-      uses: anothrNick/github-tag-action@1.34.0
-      env:
-          DEFAULT_BUMP: "patch"
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          WITH_V: false  
+    
+    - name: Get Latest Tag
+      id: previoustag
+      uses: WyriHaximus/github-action-get-previous-tag@v1
+
     - uses: ncipollo/release-action@v1
       with:
           allowUpdates: true
           artifacts: "dist/prometheus_exporter-linux-amd64"
-          tag: ${{ steps.bump_version.outputs.tag }}
+          tag: ${{ steps.previoustag.outputs.tag }}
           bodyFile: "README.md"
+          omitBodyDuringUpdate: true
           token: ${{ secrets.GITHUB_TOKEN }}   
 
     - name: Prepare for Deploy
       run: |
-        fpm -f -s dir -t deb -n digitalbits-core-prometheus-exporter -v ${{ steps.bump_version.outputs.tag }} digitalbits_core_prometheus_exporter/=/opt/digitalbits-core-prometheus-exporter/ \
+        fpm -f -s dir -t deb -n digitalbits-core-prometheus-exporter -v ${{ steps.previoustag.outputs.tag }} digitalbits_core_prometheus_exporter/=/opt/digitalbits-core-prometheus-exporter/ \
         digitalbits_core_prometheus_exporter/digitalbits-core-prometheus-exporter.service=/etc/systemd/system/digitalbits-core-prometheus-exporter.service \
         digitalbits_core_prometheus_exporter/datadog.yaml=/etc/datadog-agent/conf.d/prometheus.d/conf.yaml
     - name: Make .rpm package 
       run: | 
-          sudo alien -r -k digitalbits-core-prometheus-exporter_${{ steps.bump_version.outputs.tag }}_amd64.deb
+          sudo alien -r -k digitalbits-core-prometheus-exporter_${{ steps.previoustag.outputs.tag }}_amd64.deb
 
     - name: Deploy
       run: |
         export CLOUDSMITH_API_KEY=${{ secrets.CLOUDSMITH_API_KEY }}
         cloudsmith push deb xdb-foundation/digitalbits-core-prometheus-exporter/ubuntu/focal \
-        digitalbits-core-prometheus-exporter_${{ steps.bump_version.outputs.tag }}_amd64.deb     
-        cloudsmith push rpm xdb-foundation/digitalbits-core-prometheus-exporter/any-distro/any-version digitalbits-core-prometheus-exporter-${{ steps.bump_version.outputs.tag }}-1.x86_64.rpm
+        digitalbits-core-prometheus-exporter_${{ steps.previoustag.outputs.tag }}_amd64.deb     
+        cloudsmith push rpm xdb-foundation/digitalbits-core-prometheus-exporter/any-distro/any-version digitalbits-core-prometheus-exporter-${{ steps.previoustag.outputs.tag }}-1.x86_64.rpm
+
+
+  darwinbuild:
+    needs: release
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+    - name: Install dependencies
+      run: |
+        pip install pyinstaller
+        pip install prometheus_client
+
+    - name: Build Binaries
+      run: |
+        pyinstaller -wF digitalbits_core_prometheus_exporter/exporter.py
+        mv dist/exporter dist/prometheus_exporter-darwin-amd64
+
+    - name: Get Latest Tag
+      id: previoustag
+      uses: WyriHaximus/github-action-get-previous-tag@v1
+
+    - uses: ncipollo/release-action@v1
+      with:
+          allowUpdates: true
+          artifacts: "dist/prometheus_exporter-darwin-amd64"
+          tag: ${{ steps.previoustag.outputs.tag }}
+          bodyFile: "README.md"
+          omitBodyDuringUpdate: true
+          token: ${{ secrets.GITHUB_TOKEN }}  
