--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - name: Github Tag Bump
       id: bump_version
       uses: anothrNick/github-tag-action@1.34.0
