--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+          fetch-depth: '0' 
     - name: Github Tag Bump
       id: bump_version
       uses: anothrNick/github-tag-action@1.34.0
@@ -14,6 +16,7 @@ jobs:
           DEFAULT_BUMP: "patch"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: false  
+          
     - uses: ncipollo/release-action@v1
       with:
           tag: ${{ steps.bump_version.outputs.tag }}
