trigger on push

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,6 @@
 name: DigitalBits Core Prometheus Exporter
 
-on:
-  workflow_dispatch:
-    
-
+on: push
 jobs:
   release:
     runs-on: ubuntu-latest
