--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,81 @@ jobs:
           bodyFile: "README.md"
           token: ${{ secrets.GITHUB_TOKEN }}   
 
-  build:
+  darwinbuild:
     needs: release
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+      with:
+          fetch-depth: 0
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+    - name: Install dependencies
+      run: |
+        pip install pyinstaller
+        pip install prometheus_client
+
+    - name: Build Binaries
+      run: |
+        pyinstaller -wF digitalbits_core_prometheus_exporter/exporter.py
+        mv dist/exporter dist/prometheus_exporter-darwin-amd64
+
+    - name: Get Latest Tag
+      id: previoustag
+      uses: WyriHaximus/github-action-get-previous-tag@v1
+
+    - uses: ncipollo/release-action@v1
+      with:
+          allowUpdates: true
+          artifacts: "dist/prometheus_exporter-darwin-amd64"
+          tag: ${{ steps.previoustag.outputs.tag }}
+          bodyFile: "README.md"
+          omitBodyDuringUpdate: true
+          token: ${{ secrets.GITHUB_TOKEN }}  
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: prometheus_exporter-darwin-amd64
+        path: dist/prometheus_exporter-darwin-amd64
+
+  windowsbuild:
+    needs: release
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v2
+      with:
+          fetch-depth: 0
+    - name: Install dependencies
+      run: |
+        pip install pyinstaller
+        pip install prometheus_client
+
+    - name: Build Binaries
+      run: |
+        pyinstaller -wF digitalbits_core_prometheus_exporter/exporter.py
+        mv dist\exporter.exe dist\prometheus_exporter-windows-amd64.exe
+
+    - name: Get Latest Tag
+      id: previoustag
+      uses: WyriHaximus/github-action-get-previous-tag@v1
+
+    - uses: ncipollo/release-action@v1
+      with:
+          allowUpdates: true
+          artifacts: "dist/prometheus_exporter-windows-amd64.exe"
+          tag: ${{ steps.previoustag.outputs.tag }}
+          bodyFile: "README.md"
+          omitBodyDuringUpdate: true
+          token: ${{ secrets.GITHUB_TOKEN }}  
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: prometheus_exporter-windows-amd64.exe
+        path: dist/prometheus_exporter-windows-amd64.exe
+  build:
+    needs: [darwinbuild, windowsbuild]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -60,10 +133,24 @@ jobs:
           tag: ${{ steps.previoustag.outputs.tag }}
           bodyFile: "README.md"
           omitBodyDuringUpdate: true
-          token: ${{ secrets.GITHUB_TOKEN }}   
+          token: ${{ secrets.GITHUB_TOKEN }} 
+
+    - uses: actions/download-artifact@v2
+      with:
+        name: prometheus_exporter-windows-amd64.exe
+        path: dist/prometheus_exporter-windows-amd64.exe
+
+    - uses: actions/download-artifact@v2
+      with:
+        name: prometheus_exporter-darwin-amd64
+        path: dist/prometheus_exporter-windows-darwin-amd64
 
     - name: Prepare for Deploy
       run: |
+        tar -zcvf digitalbits-core-prometheus-exporter_${{ steps.previoustag.outputs.tag }}_darwin-amd64.tar.gz -C dist prometheus_exporter-darwin-amd64
+        tar -zcvf digitalbits-core-prometheus-exporter_${{ steps.previoustag.outputs.tag }}_linux-amd64.tar.gz -C dist prometheus_exporter-linux-amd64
+        tar -zcvf digitalbits-core-prometheus-exporter_${{ steps.previoustag.outputs.tag }}_windows-amd64.tar.gz -C dist prometheus_exporter-windows-amd64.exe
+
         fpm -f -s dir -t deb -n digitalbits-core-prometheus-exporter -v ${{ steps.previoustag.outputs.tag }} digitalbits_core_prometheus_exporter/=/opt/digitalbits-core-prometheus-exporter/ \
         digitalbits_core_prometheus_exporter/digitalbits-core-prometheus-exporter.service=/etc/systemd/system/digitalbits-core-prometheus-exporter.service \
         digitalbits_core_prometheus_exporter/datadog.yaml=/etc/datadog-agent/conf.d/prometheus.d/conf.yaml
@@ -77,68 +164,6 @@ jobs:
         cloudsmith push deb xdb-foundation/digitalbits-core-prometheus-exporter/ubuntu/focal \
         digitalbits-core-prometheus-exporter_${{ steps.previoustag.outputs.tag }}_amd64.deb     
         cloudsmith push rpm xdb-foundation/digitalbits-core-prometheus-exporter/any-distro/any-version digitalbits-core-prometheus-exporter-${{ steps.previoustag.outputs.tag }}-1.x86_64.rpm
-
-
-  darwinbuild:
-    needs: release
-    runs-on: macos-latest
-    steps:
-    - uses: actions/checkout@v2
-      with:
-          fetch-depth: 0
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-    - name: Install dependencies
-      run: |
-        pip install pyinstaller
-        pip install prometheus_client
-
-    - name: Build Binaries
-      run: |
-        pyinstaller -wF digitalbits_core_prometheus_exporter/exporter.py
-        mv dist/exporter dist/prometheus_exporter-darwin-amd64
-
-    - name: Get Latest Tag
-      id: previoustag
-      uses: WyriHaximus/github-action-get-previous-tag@v1
-
-    - uses: ncipollo/release-action@v1
-      with:
-          allowUpdates: true
-          artifacts: "dist/prometheus_exporter-darwin-amd64"
-          tag: ${{ steps.previoustag.outputs.tag }}
-          bodyFile: "README.md"
-          omitBodyDuringUpdate: true
-          token: ${{ secrets.GITHUB_TOKEN }}  
-
-  windowsbuild:
-    needs: release
-    runs-on: windows-latest
-    steps:
-    - uses: actions/checkout@v2
-      with:
-          fetch-depth: 0
-    - name: Install dependencies
-      run: |
-        pip install pyinstaller
-        pip install prometheus_client
-
-    - name: Build Binaries
-      run: |
-        pyinstaller -wF digitalbits_core_prometheus_exporter/exporter.py
-        mv dist\exporter.exe dist\prometheus_exporter-windows-amd64.exe
-
-    - name: Get Latest Tag
-      id: previoustag
-      uses: WyriHaximus/github-action-get-previous-tag@v1
-
-    - uses: ncipollo/release-action@v1
-      with:
-          allowUpdates: true
-          artifacts: "dist/prometheus_exporter-windows-amd64.exe"
-          tag: ${{ steps.previoustag.outputs.tag }}
-          bodyFile: "README.md"
-          omitBodyDuringUpdate: true
-          token: ${{ secrets.GITHUB_TOKEN }}  
+        cloudsmith push raw xdb-foundation/digitalbits-core-prometheus-exporter digitalbits-core-prometheus-exporter_${{ steps.previoustag.outputs.tag }}_windows-amd64.tar.gz
+        cloudsmith push raw xdb-foundation/digitalbits-core-prometheus-exporter digitalbits-core-prometheus-exporter_${{ steps.previoustag.outputs.tag }}_linux-amd64.tar.gz
+        cloudsmith push raw xdb-foundation/digitalbits-core-prometheus-exporter digitalbits-core-prometheus-exporter_${{ steps.previoustag.outputs.tag }}_darwin-amd64.tar.gz
